Fixed Overflow Issue

--- a/src/sections/skills/skills.scss
+++ b/src/sections/skills/skills.scss
@@ -60,6 +60,7 @@
           .skillName {
             font-size: 35px;
             margin: 0;
+            overflow: hidden;
 
             @include mobile {
               font-size: 25px;
